ctowasm/test/samples/error/test.c
#include <source_stdlib>

int main() {
  struct { int x; } x = { {1,2} };
}
